@@ -1,3 +1,7 @@
+2003-03-06  Jacob Smullyan  <jsmullyan@wnyc.org>
+
+	* pylibs/hooks.py: fix for Python 2.1 compatibility.
+
 2003-03-04  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* pylibs/formlib/validates.py: made the error messages of the validating
